--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -164,6 +164,8 @@ body {
   line-height: 20px;
   color: #333333;
   background-color: #789;
+  /*width: 320px;
+  margin: 0 auto;*/
 }
 
 a {
@@ -567,8 +569,8 @@ a:hover {
 }
 
 .container-fluid {
-  padding-right: 20px;
-  padding-left: 20px;
+/*  padding-right: 20px;
+  padding-left: 20px;*/
   *zoom: 1;
 }
 
