--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -163,7 +163,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #789;
+  background-color: #f1f3f2;
   /*width: 320px;
   margin: 0 auto;*/
 }
