--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -2,7 +2,7 @@
     padding-left: 8px;
     padding-top: 6px;
     font-size: 10px;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #938989;
     float: left;
     height: 22px;
@@ -31,7 +31,7 @@
     padding-right: 8px;
     padding-top: 6px;
     font-size: 10px;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #938989;
     float: right;
     height: 22px;
@@ -77,7 +77,7 @@
 
 .topwhite p {
     font-size: 10px;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #929292;
 }
 
@@ -120,7 +120,7 @@
 .topwhite h3 {
     text-transform: uppercase;
     font-size: 16px;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #fe4e5b;
     padding-top: 4px;
     height: 30px;
@@ -128,7 +128,7 @@
 
 .text p {
     font-size: 11px;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #525c62;
     font-weight: 400;
     line-height: 13px;
@@ -156,7 +156,7 @@
 .sepdate p{
     text-align: center;
     font-size: 12px;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #949b9f;
     margin: 0 auto;
     width: 80px;
@@ -224,7 +224,7 @@ p.likecoun {
     float: left;
     font-size: 12px;
     font-weight: 800;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #646a6e;
     margin: 5px 7px 0px -4px;
 }
@@ -245,7 +245,7 @@ a:hover .like {
     float: left;
     font-size: 12px;
     font-weight: 800;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #646a6e;
     margin: 5px 7px 0px -4px;
 }
@@ -278,7 +278,7 @@ a:hover p {
     float: left;
     font-size: 12px;
     font-weight: 800;
-    font-family: HelveticaNeue, HelveticaNeueCyr;
+    font-family: HelveticaNeue, HelveticaNeueCyr, Helvetica, Arial, sans-serif;
     color: #646a6e;
     margin: 5px 7px 0px -4px;
 }
@@ -313,4 +313,8 @@ a:hover .source {
 
 .container img { 
     position: absolute; 
+}
+
+a.hovernone:hover {
+    color: #525c62;
 }
